# COMP0035-tutorials-2025

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/1_structure/: 1-01-structure.md  1-02-environments.md  1-03-source-code-control.md  1-04-activities-repo.md  1-05-coursework-repo.md  1-06-opt-computer_setup.md  1-07-opt-integrate-IDE-GitHub.md  1-08-opt-copilot-ide.md  1-structure.md  2-environments.md  3-source-code-control.md
docs/2_pandas/: 2-0-instructions.md  2-01-python-structure.md  2-02-pandas-df.md  2-03-pandas-describe.md  2-04-missing-values-identify.md  2-05-plot-overview.md  2-06-plot-distribution.md  2-07-plot-timeseries.md  2-08-categorical-data.md  2-09-data-prep.md  2-09-resolve-issues.md  2-10-locating-rows-cols.md  2-11-removing-columns.md  2-12-resolve-missing-incorrect-values.md  2-13-change-datatypes.md  2-14-new-column.md  2-15-joining-dataframes.md  2-16-save-df-to-file.md  2-17-questions.md  2-18-finally.md  2-18-next-steps.md
docs/3_code_quality/: 3-0-instructions.md  3-01-docstrings.md  3-02-linting.md  3-03-formatter.md  3-03-github-actions.md  3-04-github-actions.md  3-04-static-analysis.md  3-05-project-structure.md  3-05-static-analysis.md  3-06-imports.md  3-06-project-structure.md  3-07-error-handling.md  3-07-imports.md  3-08-error-handling.md
docs/3_database/: 3-0-instructions.md  3-01-database-design.md  3-02-erd-intro.md  3-03-conceptual-design.md  3-04-logical-design-1nf.md  3-05-logical-design-2nf.md  3-06-logical-design-3nf.md  3-07-logical-design-constraints-data.md  3-08-logical-design-constraints-fk.md  3-09-logical-design-activity.md  3-10-physical-design-structure.md  3-11-physical-design-create-db.md  3-12-next-steps.md  3-12-sql-add-data.md  3-13-insert-no-fk.md  3-13-sql-add-data.md  3-14-insert-no-fk.md  3-14-select-query.md  3-15-insert-with-fk.md  3-15-select-query.md  3-16-insert-with-fk.md  3-16-next-steps.md  3-17-normalisation-tradeoff.md
docs/4_app_design/: 7-0-instructions.md  7-01-introduction.md  7-03-identify-classes.md  7-04-draw-design.md  7-05-review-design.md  7-06-design-medals.md  7-07-genAI.md  user-stories.md
docs/4_code_quality/: 4-0-instructions.md  4-01-docstrings.md  4-02-linting.md  4-03-github-actions.md  4-04-static-analysis.md  4-05-project-structure.md  4-06-imports.md
docs/4_database/: 4-0-instructions.md  4-01-database-design.md  4-02-erd-intro.md  4-03-conceptual-design.md  4-04-logical-design-1nf.md  4-05-logical-design-2nf.md  4-06-logical-design-3nf.md  4-07-logical-design-constraints-data.md  4-08-logical-design-constraints-fk.md  4-09-logical-design-activity.md  4-10-physical-design-structure.md  4-11-physical-design-create-db.md  4-12-sql-add-data.md  4-13-insert-no-fk.md  4-14-select-query.md  4-16-next-steps.md  4-17-normalisation-tradeoff.md
docs/5_classes_orm/: 5-0-instructions.md  5-01-class.md  5-02-data-class.md  5-02-inheritance-composition.md  5-03-inheritance-composition.md  5-03-pydantic.md  5-04-orm-sqlmodel.md  5-04-pydantic.md  5-05-orm-sqlmodel.md  5-05-sqlmodel-create-db.md  5-06-sqlmodel-add-data.md  5-06-sqlmodel-create-db.md  5-07-sqlmodel-add-data.md  5-07-summary.md  5-08-sqlalchemy.md  5-08-summary.md
docs/6_requirements/: 6-0-instructions.md  6-01-introduction.md  6-02-identify-requirements.md  6-03-document-requirements.md  6-04-prioritise-requirements.md  6-05-wireframes.md  persona.md  problem-statement.md  product-vision.md  requirements.md  use-cases.md  wireframes.md
docs/7_app_design/: 7-0-instructions.md  7-01-introduction.md  7-02-diagram-examples.md  7-03-identify-classes.md  7-04-draw-design.md  7-05-review-design.md  7-06-design-medals.md  7-07-genAI.md  7-08-user-stories.md
docs/8_classes_database_2/: 8-0-instructions.md  8-01-methods.md  8-02-insert.md  8-02-relationships.md  8-03-insert-multiple.md  8-03-insert.md  8-04-insert-multiple.md  8-04-select.md  8-05-select.md  8-05-update.md  8-06-delete.md  8-07-quality.md  8-07-update.md  8-08-quality.md  8-09-comparison.md  8-09-paralympics-queries.md
docs/9_testing/: 9-0-instructions.md  9-01-introduction.md  9-02-pytest-tests.md  9-03-fixtures.md  9-04-coverage.md  9-05-ci-github.md  9-06-further.md
docs/week1/: 0-computer_setup.md  1-structure.md  2-environments.md  3-source-code-control.md  4-activities-repo.md  5-coursework-repo.md  6-opt-computer_setup.md  7-opt-integrate-IDE-GitHub.md  8-opt-copilot-ide.md
src/activities/: week2_check_CSV.py
src/activities/data/: npc_codes.csv  para-normalised.db  para-not-normalised.sqlite  paralympics_all_raw.xlsx  paralympics_cleaned.csv  sample.db  student_data.csv
src/activities/my_code/: week2_act2.py  week2_act3.py  week2_act4.py  week2_check_csv2.py  week2_check_csv_type2.py
src/activities/starter/: compare_queries.py  cq_code_to_reformat.py  cq_docstring.py  example_plot.py  example_sql_query.py  paralympics_add_data.py  paralympics_schema_starter.sql  playing_cards.py  starter_class.py  starter_db.py  starter_exceptions.py  starter_models.py  starter_pydantic.py  starter_sqlmodel.py  student_schema.sql
src/activities/starter/db_wk8/: app.py  database.py  (+3 more)
src/para_app/: README.md  app.py  database.py  games_service.py  models.py  query_service.py
src/para_app/data/: paralympics.db
tests/: conftest.py  test_playing_cards.py  test_starter.py
(+8 files in other folders)
