# Basic project information
[project]
name = "comp0035-tutorials"
version = "2025.0.1"

# Most students will use setuptools, though poetry is also an option
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# Setuptools configuration see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
# Not strictly required as default 'src' is automatically recognised by setuptools
[tool.setuptools]
package-dir = { "" = "src" } # tells setuptools that the root of the packages is in src/.

[tool.setuptools.packages.find]
where = ["src"] # tells setuptools to go and look inside src/ to find packages.

# Setuptools configuration for the data files see https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools.package-data]
"starter_package" = ["data/*.csv", "data/*.xlsx", "data/*.db", "data/*.sqlite"]  # include all csv and xlsx files in the tutorialpkg package

[tool.setuptools.include-package-data]
include-package-data = true  # ensures the package-data files are bundled when building the package, not really needed for this course